# hecate-vector

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  rebar.config
guides/: getting_started.md
native/hecate_vector_nif/: Cargo.toml  README.md
native/hecate_vector_nif/src/: lib.rs
scripts/: build-nif.sh
src/: hecate_vector.app.src  hecate_vector.erl  hecate_vector_app.erl  hecate_vector_index.erl  hecate_vector_index_sup.erl  hecate_vector_nif.erl  hecate_vector_sup.erl
test/: hecate_vector_SUITE.erl
