[package]
name    = "hecate_vector_nif"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rustler NIF backing hecate_vector — HNSW index for the BEAM"

[lib]
name       = "hecate_vector_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34"

# Production build flips this on. The scaffold uses a brute-force
# in-memory index so the rest of the stack can integrate without a
# native HNSW dep being present yet.
#
# usearch = { version = "2.12", optional = true }

[features]
default  = []
# hnsw    = ["dep:usearch"]
